# vala-libgvc

./: AUTHORS  CMakeLists.txt  README.md
src/: CMakeLists.txt  graph.vala
vapi/: libgvc.vapi
